Try without specifying DATABASE_URL

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
           POSTGRES_PASSWORD: ''
     env:
       RAILS_ENV: test
-      DATABASE_URL: 'postgres://postgres@localhost:5432/ckia_fm_test'
+      # DATABASE_URL: 'postgres://postgres@localhost:5432/ckia_fm_test'
     steps:
       - name: Install system libs
         run: sudo apt-get -y install libpq-dev
