--- a/config/database.yml
+++ b/config/database.yml
@@ -57,10 +57,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  host: <%= ENV.fetch('PG_HOST') { nil } %>
-  database: <%= ENV.fetch('PG_DATABASE') { 'ckia_fm_test' } %>
-  username: <%= ENV.fetch('PG_USERNAME') { nil } %>
-  password: <%= ENV.fetch('PG_PASSWORD') { nil } %>
+  host: localhost
+  database: ckia_fm_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
