--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,8 @@ jobs:
         env:
           PGUSER: postgres
           PGPASSWORD: ''
+    env:
+      RAILS_ENV: test
     steps:
       - name: Install system libs
         run: sudo apt-get -y install libpq-dev
