--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,7 +37,7 @@
 
 on: [push]
 
-name: Tests, non-system
+name: Tests
 
 jobs:
   run:
@@ -67,29 +67,11 @@ jobs:
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@master
-
-      - name: Cache bundled gems
-        uses: actions/cache@v1
         with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-new-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-new-gems-
-
-      - name: Install Ruby gems
-        run: |
-          gem install bundler --no-document
-          bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 3
+          bundler-cache: true
 
       - name: Configure database
-        env:
-          PGUSER: postgres
-        run: |
-          bundle exec rails db:create
+        run: bundle exec rails db:schema:load
 
       - name: Run tests
-        env:
-          PGUSER: postgres
-        run: |
-          bundle exec rspec --exclude-pattern="spec/system/*"
+        run: bundle exec rspec -f p
