--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -59,6 +59,7 @@ jobs:
 
     env:
       RAILS_ENV: test
+      PGUSER: postgres
     steps:
       - name: Install system libraries
         run: |
