--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,4 +39,4 @@ jobs:
         run: bundle exec rails db:create
 
       - name: Run tests
-        run: bundle exec rspec -f p
+        run: bundle exec rails test
