--- a/.envrc
+++ b/.envrc
@@ -5,6 +5,5 @@ if type -P lorri &>/dev/null; then
   eval "$(lorri direnv)"
 else
   echo 'while direnv evaluated .envrc, could not find the command "lorri" [https://github.com/nix-community/lorri]'
-  watch_file gemset.nix
-  use flake
+  use nix
 fi
