rubocop: switch `rubocop-performence` from required to plugins

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,9 @@
 require:
-  - rubocop-performance
   - rubocop-rails
   - rubocop-factory_bot
+
+plugins:
+  - rubocop-performance
 
 AllCops:
   NewCops: enable
